--- a/concept.html
+++ b/concept.html
@@ -6,6 +6,8 @@
     <title>WUR Voordeelrekentool</title>
     <style>
         /* --- VERNIEUWDE WUR-HUISSTIJL --- */
+        /* --- VERNIEUWDE WUR-HUISSTIJL --- */
+
         :root {
             --wur-groen-primair: #3c8a49;  /* Het primaire groen uit het logo */
             --wur-blauw: #00546d;         /* Het donkerblauw uit 'Wageningen' */
