--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
 <div class="container">
     <header class="header"><h1>Berekeningsmodel voor uitruil</h1></header>
+            <p class="footer-disclaimer">* Let op: dit is een indicatieve berekening. Aan de resultaten kunnen geen rechten worden ontleend.</p>
     <div class="main-grid">
         <!-- LINKER KOLOM: INPUTS -->
         <div class="input-column">
@@ -90,14 +91,13 @@
                 <div class="input-grid">
                     <div class="input-group"><label for="max_vakantiegeld">Max. inzet vakantiegeld</label><input type="number" id="max_vakantiegeld" value="4000" min="0"></div>
                     <div class="input-group"><label for="max_eindejaarsuitkering">Max. inzet eindejaarsuitkering</label><input type="number" id="max_eindejaarsuitkering" value="3491.30" min="0"></div>
-                    <div class="input-group"><label for="reisdagen_gedeclareerd">Gedeclareerde reisdagen (VA64)</label><input type="number" id="reisdagen_gedeclareerd" value="122" min="0"></div>
+                    <div class="input-group"><label for="reisdagen_gedeclareerd">Gedeclareerde reisdagen</label><input type="number" id="reisdagen_gedeclareerd" value="122" min="0"></div>
                     <div class="input-group"><label for="km_fiscaal">Enkele reisafstand</label><input type="number" id="km_fiscaal" value="72" min="0"></div>
                     <div class="input-group"><label for="reeds_uitgeruild">Reeds uitgeruild dit jaar</label><input type="number" id="reeds_uitgeruild" placeholder="0" min="0"></div>
                     <div class="input-group"><label for="keuze_inzet">Welke bron wil je inzetten?</label><select id="keuze_inzet"><option value="eindejaarsuitkering">Eindejaarsuitkering</option><option value="vakantiegeld">Vakantiegeld</option></select></div>
                 </div>
             </div>
         </div>
-
         <!-- RECHTER KOLOM: RESULTATEN -->
         <div class="results-column">
              <div class="card">
@@ -113,7 +113,7 @@
                     <div class="result-box">
                         <h3>Huidige Situatie</h3>
                         <div class="calculation-details">
-                            <div class="calculation-item"><div class="item-label"><span class="main-label">Bruto</span><span class="sub-label bron_naam"></span></div><div class="item-value"><span class="amount" id="huidig_bruto"></span></div></div>
+                            <div class="calculation-item"><div class="item-label"><span class="main-label">Bruto </span><span class="sub-label bron_naam"></span></div><div class="item-value"><span class="amount" id="huidig_bruto"></span></div></div>
                             <div class="calculation-item"><div class="item-label"><span class="main-label">Belasting (ca. 50%)</span></div><div class="item-value text-negative"><span class="amount" id="huidig_belasting"></span></div></div>
                         </div>
                         <div class="calculation-item is-total"><div class="item-label"><span class="main-label">Netto uitbetaald</span></div><div class="item-value"><span class="amount" id="huidig_netto"></span></div></div>
@@ -122,7 +122,7 @@
                     <div class="result-box">
                         <h3>Situatie na Uitruil</h3>
                          <div class="calculation-details">
-                            <div class="calculation-item"><div class="item-label"><span class="main-label">Bruto</span><span class="sub-label bron_naam"></span></div><div class="item-value"><span class="amount" id="nieuw_bruto"></span></div></div>
+                            <div class="calculation-item"><div class="item-label"><span class="main-label">Bruto </span><span class="sub-label bron_naam"></span></div><div class="item-value"><span class="amount" id="nieuw_bruto"></span></div></div>
                             <div class="calculation-item"><div class="item-label"><span class="main-label">Belasting (ca. 50%)</span></div><div class="item-value text-negative"><span class="amount" id="nieuw_belasting"></span></div></div>
                             <div class="calculation-item"><div class="item-label"><span class="main-label">+ Belastingvrije uitruil</span></div><div class="item-value text-positive"><span class="amount" id="nieuw_uitruil"></span></div></div>
                         </div>
@@ -131,7 +131,6 @@
                     </div>
                 </div>
             </div>
-            <p class="footer-disclaimer">* Let op: dit is een indicatieve berekening. Aan de resultaten kunnen geen rechten worden ontleend.</p>
         </div>
     </div>
 </div>
