--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <script src="scripts/fiets.js"></script>
     <script src="scripts/verlof.js"></script>
     <script src="scripts/vakbond.js"></script>
-    <script src="scripts/main.js"></script>
+    <script type="module" src="scripts/main.js"></script>
+
 </body>
 </html>
