chill hij doetet

--- a/index.html
+++ b/index.html
@@ -210,12 +210,7 @@
     </div>
 
     <!-- JavaScript bestanden -->
-    <script src="scripts/vertaalsysteem.js"></script>
-    <script src="scripts/reiskosten.js"></script>
-    <script src="scripts/fiets.js"></script>
-    <script src="scripts/verlof.js"></script>
-    <script src="scripts/vakbond.js"></script>
-    <script type="module" src="scripts/main.js"></script>
+<script type="module" src="js/main.js"></script>
 
 </body>
 </html>
