--- a/index.html
+++ b/index.html
@@ -193,14 +193,15 @@
         <section id="tool-vakbond" class="tool-section" style="display: none;"></section>
     </div>
 
-    <!-- Modal voor uitleg of info -->
-    <div id="info-modal" class="modal-container" style="display: none;">
-        <div class="modal-overlay"></div>
-        <div class="modal-content">
-            <button id="close-modal-btn" class="modal-close-btn" type="button">&times;</button>
-            <div id="modal-content-body"></div>
+<!-- Modal voor uitleg of info -->
+<div id="info-modal" class="modal-container">
+    <div class="modal-content">
+        <button id="close-modal-btn" class="modal-close-btn" type="button">×</button>
+        <div id="modal-content-body">
+            <!-- Content wordt hier door JavaScript ingeladen -->
         </div>
     </div>
+</div>
 
     <!-- JavaScript bestanden -->
 <script type="module" src="js/main.js"></script>
