--- a/index.html
+++ b/index.html
@@ -190,7 +190,56 @@
     </div>
 </section>
 
-        <section id="tool-fiets" class="tool-section" style="display: none;"></section>
+        <section id="tool-fiets" class="tool-section" style="display: none;">
+  <div class="main-grid">
+    <!-- LINKERKOLOM: INPUT -->
+    <div class="input-column">
+      <div class="card">
+        <h2>Fietsregeling</h2>
+        <div class="input-grid">
+          <div class="input-group">
+            <label for="fiets_aankoopbedrag">Aankoopbedrag fiets (max €2.500)</label>
+            <input type="number" id="fiets_aankoopbedrag" value="0" min="0" max="2500">
+          </div>
+          <div class="input-group">
+            <label for="fiets_bruto_bron">Beschikbaar bruto bedrag (vakantiegeld/EJU)</label>
+            <input type="number" id="fiets_bruto_bron" value="0" min="0">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- RECHTERKOLOM: RESULTAAT -->
+    <div class="results-column">
+      <div class="card">
+        <h2>Jouw netto voordeel</h2>
+        <div class="hero-result">
+          <div class="label">Je houdt netto méér over dankzij belastingvoordeel:</div>
+          <span class="value" id="fiets_voordeel">€ 0,00</span>
+        </div>
+      </div>
+
+      <div class="card">
+        <h2>Details van de berekening</h2>
+        <div class="result-box">
+          <div class="calculation-item">
+            <div class="item-label">Bruto ingezet bedrag</div>
+            <div class="item-value">
+              <span class="amount" id="fiets_brutoIngezet">€ 0,00</span>
+            </div>
+          </div>
+          <div class="calculation-item">
+            <div class="item-label">Netto kosten voor jou</div>
+            <div class="item-value">
+              <span class="amount" id="fiets_nettoKosten">€ 0,00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
         <section id="tool-extra_verlof" class="tool-section" style="display: none;"></section>
         <section id="tool-vakbond" class="tool-section" style="display: none;"></section>
     </div>
